2017-05-29 Pedro Canadilla <pedro.canadilla@gmail.com>
    * For the M/M/1, M/M/c and M/M/Infinte models, the parameter has been updated to the following description: "number of customers in the system from which you want to obtain its probabilities. Put n=0 for a idle probability (no customer present in the system or system idle). With n=-1, no probabilities are computed". No changes has been done in source code.

2017-05-13 Pedro Canadilla <pedro.canadilla@gmail.com>
    * The big source code queueing.R has been divided into small model.R files.

2017-03-20 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Model MCMN had a bug. Solved.
    * New summary functions following R FAQ. summary now returns an object of class summary.o_MM1, and then new print functions prints in a table format (using data.frame) the main results of the model.

2016-12-25 Pedro Canadilla <pedro.canadilla@gmail.com>
    * old summary functions renamed to Report.

2016-10-16 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Three bugs detected and fixed in the Multiple Class Open Network. CheckInput was checking capacity constraints for delay nodes; the checking of values was wrong, getting array index out of limits error, and finally, some W was wrong calculated in the model when delay centers was provided in a model with routing probabilities. 
    * In the same way, in the Multiple Class Closed Network the checking of values was wrong, getting array index out of limits errors.
    * Thank you very much for the contribution of Alexandre Martins <martins.gomes.alex at gmail.com> to bring my attention a function developed by Tom Potter at <https://stat.ethz.ch/pipermail/r-help/2001-September/014986.html>, which makes the B_erlang function atonishing fast.

2016-08-13 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Fixed Engset calculator. 

2015-11-08 Pedro Canadilla <pedro.canadilla@gmail.com>
    * Fixed NOTE as CRAN checks has detected in the new version of R.
