@@ -1,11 +1,11 @@
 Package: queueing
-Version: 0.2.10
-Date: 2017-05-13
+Version: 0.2.11
+Date: 2017-10-13
 Title: Analysis of Queueing Networks and Models
 Author: Pedro Canadilla
 Maintainer: Pedro Canadilla <pedro.canadilla@gmail.com>
 Depends: R (>= 2.11.1)
-Suggests:
+Suggests: testthat
 Description: It provides versatile tools for analysis of birth and death based Markovian Queueing Models
     and Single and Multiclass Product-Form Queueing Networks.
     It implements M/M/1, M/M/c, M/M/Infinite, M/M/1/K, M/M/c/K, M/M/c/c, M/M/1/K/K, M/M/c/K/K, M/M/c/K/m, M/M/Infinite/K/K,
@@ -18,6 +18,7 @@ License: GPL-2
 Copyright: Pedro Canadilla
 URL: https://www.r-project.org
 NeedsCompilation: no
-Packaged: 2017-05-28 18:26:02 UTC; oracle
+Packaged: 2017-10-13 10:38:12 UTC; oracle
 Repository: CRAN
-Date/Publication: 2017-05-29 06:58:57 UTC
+Date/Publication: 2017-10-13 20:57:57 UTC
+RoxygenNote: 6.0.1
