@@ -1,0 +1,4 @@
+library(testthat)
+library(queueing)
+
+test_check("queueing")
